# streamlit-langchain

./: .editorconfig  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  docker-compose.yml  entry_point.sh  home.py  pyproject.toml
app/: interface.py  langchain.py  prompts.py  shared.py
pages/: 1_AI_Summarize.py
